--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume-2020",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mjguggen.github.io/Portfolio/",
+  "homepage": "https://mikeguggenbuehl.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
