--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "blobs": "^2.1.0",
+    "flubber": "^0.4.2",
+    "node-sass": "^4.14.1",
+    "particles.js": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
