--- a/package.json
+++ b/package.json
@@ -4,27 +4,19 @@
   "private": true,
   "homepage": "https://mikeguggenbuehl.com",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "blobs": "^2.1.0",
-    "flubber": "^0.4.2",
-    "node-sass": "^4.14.1",
-    "particles.js": "^2.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-responsive-carousel": "^3.2.11",
-    "react-scripts": "4.0.1",
-    "react-spring": "^8.0.27",
-    "web-vitals": "^0.2.4"
+    "blobs": "^2.2.1-beta.1",
+    "node-sass": "^7.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-scripts": "^5.0.1",
+    "react-spring": "^9.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
